--- a/en/systems/mettal-activator.html
+++ b/en/systems/mettal-activator.html
@@ -280,7 +280,7 @@
                                         <h2 class="h3s"> is a water-based oxidizing solution that
                                             reacts when it comes into contact with metal particles.</h2> It is used to
                                         accelerate
-                                        the oxidation of Pure Mettal and Classic Mettal products.
+                                        the oxidation of
                                         <a class="links" target="_blank" href="./pure-mettal-metallic-microcement.html">
                                             <strong>Pure
                                                 Mettal</strong> </a>
