--- a/it - copia/sistemi/arcocem-microcement-pigments.html
+++ b/it - copia/sistemi/arcocem-microcement-pigments.html
@@ -363,7 +363,7 @@
                                 <a href="https://www.topciment.com/en/data-sheets/ArcocemBASIC-EN.pdf" target="_blank"
                                     style="color: #0567f9;font-weight: 700;">
 
-                                    Download the Arcocem Basic technical sheet here
+                                   Scarica qui la scheda tecnica diArcocem Basic technical sheet here
                                     <span class="fa-stack">
                                         <i class="fa fa-file-pdf-o fa-stack-1x"></i>
                                     </span>
@@ -469,7 +469,7 @@
                         </div>
                         <p> <a href="https://www.topciment.com/en/data-sheets/ArcocemPLUS-EN.pdf" target="_blank"
                                 style="color: #0567f9;font-weight: 700;">
-                                Download the Arcocem Plus technical sheet here
+                               Scarica qui la scheda tecnica diArcocem Plus technical sheet here
                                 <span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
                                 </span>
@@ -569,9 +569,9 @@
                                         <div class="col-3"><img src="../../imagenes/Arcocem/icons/listo_al_uso.png"
                                                 class="figure-img img-fluid rounded" alt="Efectto"></div>
                                         <div class="col-8">
-                                            <strong>Product ready to use
+                                            <strong>Prodotto pronto all'uso
                                             </strong>
-                                            <p>Do not dilute with water.</p>
+                                            <p>Non può essere diluito con acqua.</p>
 
                                         </div>
                                     </div>
@@ -597,7 +597,7 @@
                         </div>
                         <p> <a href="https://www.topciment.com/en/data-sheets/ArcocemBRONCE-EN.pdf" target="_blank"
                                 style="color: #0567f9;font-weight: 700;">
-                                Download the Arcocem Oxide technical sheet here.
+                               Scarica qui la scheda tecnica diArcocem Oxide technical sheet here.
                                 <span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
                                 </span>
@@ -781,9 +781,9 @@
                                         <div class="col-3"><img src="../../imagenes/Arcocem/icons/listo_al_uso.png"
                                                 class="figure-img img-fluid rounded" alt="Efectto"></div>
                                         <div class="col-8">
-                                            <strong>Product ready to use
+                                            <strong>Prodotto pronto all'uso
                                             </strong>
-                                            <p>Do not dilute with water.
+                                            <p>Non può essere diluito con acqua.
                                             </p>
 
                                         </div>
@@ -794,7 +794,7 @@
                         </div>
                         <p> <a href="https://www.topciment.com/en/data-sheets/ArcocemMETAL-EN.pdf" target="_blank"
                                 style="color: #0567f9;font-weight: 700;">
-                                Download the Arcocem Metal technical sheet here
+                               Scarica qui la scheda tecnica diArcocem Metal technical sheet here
                                 <span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
                                 </span>
