--- a/it/sistemi.html
+++ b/it/sistemi.html
@@ -732,19 +732,19 @@
         <div class="col-md-3 col-12">
           <div class="row mb-2 ">
             <div class="col-md-12 col-6 p-0"> <a href="sistemi/strumenti.html#varilla" class="vermas">
-                <strong>Mixing rod</strong></a><br>
+                <strong>Asta miscelatrice</strong></a><br>
               <a href="sistemi/strumenti.html#perfil" class="vermas">
-                <strong>Profile aluminium</strong></a><br>
+                <strong>Profilo di alluminio</strong></a><br>
               <a href="sistemi/strumenti.html#llana-goma" class="vermas">
-                <strong>Microcement trowel rubber</strong></a>
+                <strong>Spatola per microcemento</strong></a>
             </div>
             <div class="col-md-12 col-6 p-0">
               <a href="sistemi/strumenti.html#llana-acero" class="vermas">
-                <strong>Microcement trowel bi-flex steel</strong></a><br>
+                <strong>Spatola di acaio Bi-Flex </strong></a><br>
               <a href="sistemi/strumenti.html#malla" class="vermas">
-                <strong>Fiberglass mesh builtex</strong></a><br>
+                <strong>Rete flessibile di fibra di vetro</strong></a><br>
               <a href="sistemi/strumenti.html#rodillo" class="vermas">
-                <strong>Short-haired roller</strong></a>
+                <strong>Rullo a pelo corto</strong></a>
             </div>
           </div>
         </div>
