--- a/it/sistemi/arcocem-pigmenti.html
+++ b/it/sistemi/arcocem-pigmenti.html
@@ -34,7 +34,7 @@
         il spazio che vuoi con il colore che vuoi" />
 
 
-    <link rel="canonical" href="https://www.topciment.com/it/arcocem-pigmenti.html" />
+    <link rel="canonical" href="https://www.topciment.com/it/sistemi/arcocem-pigmenti.html" />
 
 
     <style type="text/css">
