--- a/it/sistemi/atlanttic-microcementi-per-piscine.html
+++ b/it/sistemi/atlanttic-microcementi-per-piscine.html
@@ -34,7 +34,7 @@
         Creazione uniche per spazi immersi" />
 
 
-    <link rel="canonical" href="https://www.topciment.com/it/atlanttic-microcementi-per-piscine.html" />
+    <link rel="canonical" href="https://www.topciment.com/it/sistemi/atlanttic-microcementi-per-piscine.html" />
 
 
     <style type="text/css">
@@ -344,7 +344,7 @@
                                 <!--    <a class="links" href="../fichas-tecnicas/Aquaciment-ES.pdf" target="_blank"
                                 style="font-weight: 700;"> <span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span>Download here the technical sheet of
+                                </span>Scarica qui la scheda tecnica di
                                 Atlanttic Aquaciment
                             </a> -->
                         </div>
