--- a/it/sistemi/classic-mettal-vernici-metallizzate.html
+++ b/it/sistemi/classic-mettal-vernici-metallizzate.html
@@ -35,7 +35,7 @@
         content="Classic Mettal è un rivestimento di vernice metallica con finiture ossidate per decorazione di lusso artigianale" />
 
 
-    <link rel="canonical" href="https://www.topciment.com/it/classic-mettal-vernici-metallizzate.html" />
+    <link rel="canonical" href="https://www.topciment.com/it/sistemi/classic-mettal-vernici-metallizzate.html" />
 
 
     <style type="text/css">
@@ -496,6 +496,7 @@
             </div>
         </section>
         <!-- end pure mettal -->
+
         <!-- Aplicacion start -->
         <div id="separador50px">
         </div>
@@ -509,8 +510,8 @@
             <div class="contenedorMenuOculto">
                 <div class="contenedorMagenDerecha">
                     <div class="stepfloor mt-5">
-                        <a class="text-dark en3" href="javascript:MostrarOcultar('floor');"><strong>+ STEP BY
-                                STEP</strong></a>
+                        <a class="text-dark en3" href="javascript:MostrarOcultar('floor');"><strong>+ PASSO PER
+                                PASSO</strong></a>
                         <div class="ocultable" id="floor" style="display: block;">
                             <!-- Paso 1 -->
                             <div class="row mt-5 ">
