--- a/it/sistemi/elitte-velature-e-pigmenti-metalizzati.html
+++ b/it/sistemi/elitte-velature-e-pigmenti-metalizzati.html
@@ -29,12 +29,12 @@
     <script type='text/javascript' src='../../js/mycode.js'></script>
     <!-- End new styles -->
 
-    <title>Applicazione del sigillante per proteggere il microcemento</title>
-    <meta name="description"
-        content="Per proteggere il microcemento applichiamo un sigillante che gli conferisce resistenza chimica e meccanica,finitura satinata, opaca o lucida." />
+    <title>Velature metalliche per rivestimenti decorativi</title>
+    <meta name="description" content="Cerchi finiture lucide o forse preferisci metalliche? Con la nostra gamma di velature Ellite, puoi avere tutto quello
+        che voi. Scopre di più!" />
 
 
-    <link rel="canonical" href="https://www.topciment.com/it/arcocem-pigmenti.html" />
+    <link rel="canonical" href="https://www.topciment.com/it/sistemi/elitte-velature-e-pigmenti-metalizzati.html" />
 
 
     <style type="text/css">
@@ -154,9 +154,9 @@
                 <div class="menu botones" style="margin-left:100px">
                     <ul>
                         <li><a href="../informazioni-microcemento.html">Microcemento</a></li>
-                        <li><a href="../sistemi.html">Sistemi</a></li>
+                        <li><a class="activo" href="../sistemi.html">Sistemi</a></li>
                         <li><a href="../galleria.html">Galleria</a></li>
-                        <li><a class="activo" href="../professionisti.html">Professionisti</a></li>
+                        <li><a href="../professionisti.html">Professionisti</a></li>
                         <li><a href="../notizie.html">Notizie</a></li>
                         <li><a href="../contattaci.html">Contattaci</a></li>
                     </ul>
@@ -261,17 +261,22 @@
 
                                 <h1 class="h2s">Elitte</h1>
                                 <h2 class="h3s">
-                                    is the range of glazes with metallic reflections.
+                                    è la gamma di velature con riflessi metallizzati.
                                 </h2>
 
-                                <p> It is a very versatile product that offers a wide variety of finishes and achieves a
-                                    pleasant and changing play of light and reflected colours.
-                                    It offers many application possibilities. It has no limits. </p>
-                                <p>The Elitte range of paints has two varieties of results: metallic finish (Glaze) and
-                                    metallic finish with glitter (Glitter). </p>
-                                <p>These metallic glazes allow different finishes to be obtained depending on the method
-                                    of application. Thus, from homogeneous results to finishes with more contrast can be
-                                    achieved.
+                                <p> È un prodotto multiuso che offre una grande varietà e che ottiene un gioco di luce
+                                    gradevole e variabile e colori
+                                    riflessi
+                                    Offre tante possibilità di applicazione. Non ha limiti. </p>
+
+                                <p>
+                                    La gamma di vernici Elitte ha due varietà di risultati: finitura metallica (Glaze) e
+                                    finitura metallica coi brillantini
+                                    (Glitter). </p>
+
+                                <p>Queste velature metalliche permettono di ottenere diverse finiture dipendendo del
+                                    metodo di applicazione. Così, si
+                                    possono fare da finiture omogenee a finiture con più contrasti
                                 </p>
                             </div>
 
@@ -298,9 +303,9 @@
                     </div>
                     <p>
                         <h2 class="h2s">Elitte Glaze</h2>
-                        <h3 class="h3s">is the range of ready-to-use metal glazes.</h3> The gloss produced by the
-                        metal produces an effect of light and shadow capable of giving any room its own style and
-                        personality.
+                        <h3 class="h3s">è la gamma di velature metalliche pronte all'uso.</h3>
+                        La luminosità prodotta dal metallo produce un effetto di luce e ombra in grado di dare a
+                        qualsiasi ambiente il suo stile e la sua personalità.
                     </p>
 
                     <div id="separador50px">
@@ -382,8 +387,8 @@
                                         src="../../imagenes/sistemas/icons/aplicable_cualquier_soporte.png"
                                         class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                 <div class="col-md-9">
-                                    <strong>It can be applied on any type of substrate</strong>
-                                    <p> microcement, concrete, brick, ceramic, etc.</p>
+                                    <strong>Applicabile su qualsiasi tipo di supporto</strong>
+                                    <p> Microcemento, calcestruzzo, mattone, ceramica, ecc.</p>
                                 </div>
                             </div>
                         </div>
@@ -393,7 +398,7 @@
                                         src="../../imagenes/sistemas/icons/versatilidad_aplicacion.png"
                                         class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Application versatility
+                                    <strong>Versatilità di applicazione
                                     </strong>
                                     <p>Applicabile con spatola, pennello, spugna, rullo o pistola.</p>
                                 </div>
@@ -406,9 +411,9 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/listo_al_uso.png"
                                         class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Product ready to use
+                                    <strong>Prodotto pronto all'uso
                                     </strong>
-                                    <p> Do not dilute with water.
+                                    <p> Non può essere diluito con acqua.
                                     </p>
                                 </div>
                             </div>
@@ -419,21 +424,21 @@
                         Rendimento</p>
 
                     <div class="row">
-                        <div class="col-md-4"><span><strong>Elitte Aluminio 054</strong><br> 12,00 m2/L</span></div>
-                        <div class="col-md-4"><span><strong>Elitte Oro 063</strong><br> 23,50 m2/L</span></div>
+                        <div class="col-md-4"><span><strong>Elitte Aluminio 054</strong><br> 12,00 m²/L</span></div>
+                        <div class="col-md-4"><span><strong>Elitte Oro 063</strong><br> 23,50 m²/L</span></div>
 
-                        <div class="col-md-4"><span><strong>Elitte Cobre 063</strong><br> 23,50 m2/L</span></div>
+                        <div class="col-md-4"><span><strong>Elitte Cobre 063</strong><br> 23,50 m²/L</span></div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4"><span><strong>Elitte Copper Red 063</strong><br> 23,50 m2/L</span></div>
-                        <div class="col-md-4"><span><strong>Elitte Blanco Plata 500 </strong><br> 14,00 m2/L</span>
+                        <div class="col-md-4"><span><strong>Elitte Copper Red 063</strong><br> 23,50 m²/L</span></div>
+                        <div class="col-md-4"><span><strong>Elitte Blanco Plata 500 </strong><br> 14,00 m²/L</span>
                         </div>
 
                     </div>
                     <!-- Presentación -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Presentazione</p>
-                    <p>Elitte Glaze is available in 500 mL bottles.
+                    <p> Eltte Glaze è disponibile in contenitori di 500 mL.
                     </p>
                 </div>
             </div>
@@ -458,8 +463,9 @@
                     </div>
                     <p>
                         <h2 class="h2s">Elitte Glitter</h2>
-                        <h3 class="h3s">is the ready-to-use range of metal glitter glazes.</h3> It goes one
-                        step further by offering a personal, differentiating finish with a high decorative value.
+                        <h3 class="h3s"> è la gamma di brillantini metallici pronte all'uso. </h3> Va un passo avanti,
+                        offrendo una finitura personale e
+                        differenziata con un alto grado di decorazione.
                     </p>
 
                     <div id="separador50px">
@@ -522,8 +528,8 @@
                                         src="../../imagenes/sistemas/icons/aplicable_cualquier_soporte.png"
                                         class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                 <div class="col-md-9">
-                                    <strong>It can be applied on any type of substrate</strong>
-                                    <p>microcement, concrete, brick, ceramic, etc.</p>
+                                    <strong>Applicabile su qualsiasi tipo di supporto</strong>
+                                    <p>Microcemento, calcestruzzo, mattone, ceramica, ecc.</p>
                                 </div>
                             </div>
                         </div>
@@ -533,7 +539,7 @@
                                         src="../../imagenes/sistemas/icons/versatilidad_aplicacion.png"
                                         class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Application versatility
+                                    <strong>Versatilità di applicazione
                                     </strong>
                                     <p>Applicabile con spatola, pennello, spugna, rullo o pistola.</p>
                                 </div>
@@ -546,9 +552,9 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/listo_al_uso.png"
                                         class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Product ready to use
+                                    <strong>Prodotto pronto all'uso
                                     </strong>
-                                    <p> Do not dilute with water.
+                                    <p> Non può essere diluito con acqua.
                                     </p>
                                 </div>
                             </div>
@@ -557,12 +563,12 @@
                     <!-- Rendimiento -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Rendimento</p>
-                    <p>The performance will depend on the desired type of finish.</p>
+                    <p>Il rendimento dipenderà del tipo di finitura desiderata</p>
 
                     <!-- Presentación -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Presentazione</p>
-                    <p>Elitte Glitter is available in 500 mL bottles.</p>
+                    <p>Elitte Glitter è disponibile in contenitori di 500 mL.</p>
                 </div>
             </div>
         </section>
