--- a/it/sistemi/mettal-activator.html
+++ b/it/sistemi/mettal-activator.html
@@ -29,12 +29,13 @@
     <script type='text/javascript' src='../../js/mycode.js'></script>
     <!-- End new styles -->
 
-    <title>Applicazione del sigillante per proteggere il microcemento</title>
-    <meta name="description"
-        content="Per proteggere il microcemento applichiamo un sigillante che gli conferisce resistenza chimica e meccanica,finitura satinata, opaca o lucida." />
+    <title>
+        Accelerante per finiture ossidate</title>
+    <meta name="description" content="Mettal Activator è un sistema accelerante per creare finiture con effetto ossido. È usato sulla famiglia di prodotti
+        Classic Mettal e Pure Mettal" />
 
 
-    <link rel="canonical" href="https://www.topciment.com/it/arcocem-pigmenti.html" />
+    <link rel="canonical" href="https://www.topciment.com/it/sistemi/mettal-activator.html" />
 
 
     <style type="text/css">
@@ -154,9 +155,9 @@
                 <div class="menu botones" style="margin-left:100px">
                     <ul>
                         <li><a href="../informazioni-microcemento.html">Microcemento</a></li>
-                        <li><a href="../sistemi.html">Sistemi</a></li>
+                        <li><a class="activo" href="../sistemi.html">Sistemi</a></li>
                         <li><a href="../galleria.html">Galleria</a></li>
-                        <li><a class="activo" href="../professionisti.html">Professionisti</a></li>
+                        <li><a href="../professionisti.html">Professionisti</a></li>
                         <li><a href="../notizie.html">Notizie</a></li>
                         <li><a href="../contattaci.html">Contattaci</a></li>
                     </ul>
@@ -261,14 +262,16 @@
                                 <div class="col-md-7 ">
                                     <p>
                                         <h1 class="h2s">Mettal Activator</h1>
-                                        <h2 class="h3s"> is a water-based oxidizing solution that
-                                            reacts when it comes into contact with metal particles.</h2> It is used to
-                                        accelerate
-                                        the oxidation of Pure Mettal and Classic Mettal products.
-                                        <a class="links" target="_blank" href="./pure-mettal-metallic-microcement.html">
+                                        <h2 class="h3s"> é una soluzione acquosa che reagisce con le particelle
+                                            metalliche. </h2>
+                                        È usato per accelerare l'ossidazione
+                                        dei prodotti
+                                        <a class="links" target="_blank"
+                                            href="./pure-mettal-rivestimento-metallico.html">
                                             <strong>Pure
                                                 Mettal</strong> </a>
-                                        y <a href="./classic-mettal-metallic-paints.html" class="links" target="_blank">
+                                        y <a href="./classic-mettal-vernici-metallizzate.html" class="links"
+                                            target="_blank">
                                             <strong>Classic Mettal</strong></a>.
 
                                     </p>
@@ -285,8 +288,9 @@
                                                 src="../../imagenes/Mettal_Activator/exteriores_interiores.png"
                                                 class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                         <div class="col-md-9">
-                                            <strong>Can be applied in interiors and exteriors:</strong>
-                                            <p>in facades, on porches and in interior rooms.</p>
+                                            <strong>
+                                                Applicabile in ambiente interno e esterno</strong>
+                                            <p>È applicabile a facciate, portici e all'interno.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -296,9 +300,9 @@
                                                 src="../../imagenes/Mettal_Activator/aplicable_cualquier_soporte.png"
                                                 class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                         <div class="col-md-9">
-                                            <strong>To be applied on Classic and Pure Mettal
+                                            <strong>Applicabile su Classic e Pure Mettal
                                             </strong>
-                                            <p>And all Tipi di ferrous surfaces, bronze, copper and brass.</p>
+                                            <p>E qualsiasi tipo di superfici. ferrose, bronzo, rame e ottone.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -310,9 +314,9 @@
                                                 src="../../imagenes/Mettal_Activator/pulverizador.png"
                                                 class="figure-img img-fluid rounded" alt="Icon" title="Icon"></div>
                                         <div class="col-md-9">
-                                            <strong>Applied by spray
+                                            <strong>È applicato mediante spruzzo
                                             </strong>
-                                            <p> Increases the precision, comfort and quality of the application.
+                                            <p> Aumenta la precisione, la comodità e la qualità della applicazione.
 
                                             </p>
                                         </div>
@@ -323,12 +327,16 @@
                             <!-- Rendimiento -->
                             <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                                 Rendimento</p>
-                            <p>Depending on the degree of oxidation to be obtained, performance may vary between 13-15
-                                m² per litre.</p>
+                            <p>
+                                A seconda dell’effetto ossidato che si vuole ottenere il consumo può variare tra: 13-15
+                                m2 /L/strato.</p>
                             <!-- Presentación -->
                             <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                                 Presentazione</p>
-                            <p>400 mL container with sprayer.</p>
+
+                            <p> Di 400 mL con spruzzo.</p>
+                            <p> Di 400 mL con spruzzo.</p>
+                            <p> Di 1 L senza spruzzo.</p>
 
                         </div>
                     </div>
@@ -733,7 +741,21 @@
 
     <script src="../../js/jquery-1.9.1.min.js"></script>
     <script src='../../js/jquery.scrollto.js'></script>
+    <!-- Comparar imagenes -->
+    <script src="../../plugins/twentytwenty-master/js/jquery.event.move.js"></script>
+    <script src="../../plugins/twentytwenty-master/js/jquery.twentytwenty.js"></script>
+    <script>
+        $(document).ready(function () {
 
+            $(".color").twentytwenty();
+            /* $("#bronce .twentytwenty-overlay .twentytwenty-before-label").attr("data-content", "Antes:Bronze");
+            $("#bronce .twentytwenty-overlay .twentytwenty-after-label").attr("data-content", "Después:Bronze + Mettal
+            Activator"); */
+
+            $(".color .twentytwenty-overlay .twentytwenty-before-label").attr("data-content", "No oxide");
+            $(".color .twentytwenty-overlay .twentytwenty-after-label").attr("data-content", "With oxide");
+        });
+    </script>
     <script languaje="Javascript">
         <!--
         document.write('<style type="text/css">div.ocultable{display: none;}</style>');
