--- a/it/sistemi/strumenti.html
+++ b/it/sistemi/strumenti.html
@@ -29,12 +29,12 @@
     <script type='text/javascript' src='../../js/mycode.js'></script>
     <!-- End new styles -->
 
-    <title>Applicazione del sigillante per proteggere il microcemento</title>
+    <title>Strumenti per la corretta applicazione del microcemento</title>
     <meta name="description"
-        content="Per proteggere il microcemento applichiamo un sigillante che gli conferisce resistenza chimica e meccanica,finitura satinata, opaca o lucida." />
+        content="Struenti per l'applicazione del microcemento a rivestimenti di pareti, pavimenti e mobili" />
 
 
-    <link rel="canonical" href="https://www.topciment.com/it/arcocem-pigmenti.html" />
+    <link rel="canonical" href="https://www.topciment.com/it/sistemi/strumenti.html" />
 
 
     <style type="text/css">
@@ -154,9 +154,9 @@
                 <div class="menu botones" style="margin-left:100px">
                     <ul>
                         <li><a href="../informazioni-microcemento.html">Microcemento</a></li>
-                        <li><a href="../sistemi.html">Sistemi</a></li>
+                        <li><a class="activo" href="../sistemi.html">Sistemi</a></li>
                         <li><a href="../galleria.html">Galleria</a></li>
-                        <li><a class="activo" href="../professionisti.html">Professionisti</a></li>
+                        <li><a href="../professionisti.html">Professionisti</a></li>
                         <li><a href="../notizie.html">Notizie</a></li>
                         <li><a href="../contattaci.html">Contattaci</a></li>
                     </ul>
@@ -183,15 +183,15 @@
             <div id="sidebar" class="menuOculto menuMicrocementos stick" style="display: block; top: 200px;">
                 <ul>
                     <li>
-                        <a href="#up" style="font-size:26px">Tools</a>
+                        <a href="#up" style="font-size:26px">Strumenti</a>
                     </li>
-                    <li><a href="#que-es">What are they for?</a></li>
-                    <li><a href="#varilla"> Stainless steel mixer</a></li>
-                    <li><a href="#perfil"> Aluminum profile</a></li>
-                    <li><a href="#llana-goma">Rubber microcement trowel</a></li>
-                    <li><a href="#llana-acero"> Biflex steel microcement trowel </a></li>
-                    <li><a href="#malla">Fiberglass mess builtex </a></li>
-                    <li><a href="#rodillo"> Short-hair roller</a></li>
+                    <li><a href="#que-es">A cosa servono?</a></li>
+                    <li><a href="#varilla"> Asta miscelatrice</a></li>
+                    <li><a href="#perfil"> Profilo di alluminio</a></li>
+                    <li><a href="#llana-goma">Spatola per microcemento</a></li>
+                    <li><a href="#llana-acero"> Spatola di acaio Bi-Flex </a></li>
+                    <li><a href="#malla">Rete flessibile di fibra di vetro </a></li>
+                    <li><a href="#rodillo"> Rullo a pelo corto</a></li>
                     <!-- Future launch
 					<li><a href="#preguntas-frecuentes">Preguntas frecuentes</a></li>
 					-->
@@ -286,7 +286,7 @@
         <section>
             <div class="contenedorMenuOculto">
                 <div class="contenedorMagenDerecha">
-                    <h2 class="en2">STAINLESS STEEL MIXER</h2>
+                    <h2 class="en2">Asta miscelatrice</h2>
                     <div class="row">
                         <!-- Imagen producto -->
                         <div class="col-md-6">
@@ -351,7 +351,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/adecuado.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class=" col-md-9">
-                                    <strong>Application
+                                    <strong>Applicazione
                                     </strong>
                                     <p>Suitable for liquid materials, paints, varnishes, wall paints and dispersion
                                         paints, etc.
@@ -380,7 +380,7 @@
         <section>
             <div class="contenedorMenuOculto">
                 <div class="contenedorMagenDerecha">
-                    <h2 class="en2">ALUMINUM PROFILE</h2>
+                    <h2 class="en2">Profilo di alluminio</h2>
                     <div class="row">
                         <!-- imagen producto -->
                         <div class="col-md-6">
@@ -443,7 +443,7 @@
                         </div>
                         <!-- descripcion -->
                         <div class="col-md-6">
-                            <h3 class="h3s">The flexible soft rubber microcement trowel is suitable for horizontal and
+                            <h3 class="h3s">The flexible soft Spatola per microcemento is suitable for horizontal and
                                 vertical
                                 surfaces. It is used in the application of Microfino microcement. It provides a water
                                 effect, blurred finish with no burn marks.</h3>
@@ -486,7 +486,7 @@
             <div class="contenedorMenuOculto">
                 <div class="contenedorMagenDerecha">
                     <h2 class="en2" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-                        BIFLEX STEEL MICROCEMENT TROWEL
+                        Spatola di acaio Bi-Flex
                     </h2>
                     <div class="row">
                         <!-- imagen producto -->
@@ -617,7 +617,7 @@
             <div class="contenedorMenuOculto">
                 <div class="contenedorMagenDerecha">
                     <h2 class="en2" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-                        SHORT-HAIR ROLLER</h2>
+                        Rullo a pelo corto</h2>
                     <div class="row">
                         <!-- imagen producto -->
                         <div class="col-md-6">
