--- a/it/sistemi/unlimitted.html
+++ b/it/sistemi/unlimitted.html
@@ -188,8 +188,8 @@
                     <li><a href="#que-es-unlimitted">Che cos'è Unlimitted?</a></li>
                     <li><a href="#unlimitted-microbase">Unlimitted Microbase</a></li>
                     <li><a href="#unlimitted-microdeck">Unlimitted Microdeck</a></li>
-                    <li><a href="#aplicacion">Application</a></li>
-                    <li> <a href="#colores">Colours</a></li>
+                    <li><a href="#aplicacion">Applicazione</a></li>
+                    <li> <a href="#colores">Colori</a></li>
                 </ul>
             </div>
         </div>
@@ -338,7 +338,7 @@
                             <!--  <a class="links" href="../fichas-tecnicas/" target="_blank" style="font-weight: 700;"> <span
                                     class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span>Download here the technical sheet of
+                                </span>Scarica qui la scheda tecnica di
                                 Unlimitted Microbase
                             </a> -->
                         </div>
@@ -387,7 +387,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong> Compression resistance</strong>
+                                    <strong> Resistenza alla compressione</strong>
                                     <p>30 N/m² (28 giorni)
                                 </div>
                             </div>
@@ -399,7 +399,7 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/alta_adherencia.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Adherence to the substrate
+                                    <strong>Aderenza al supporto
                                     </strong>
                                     <p>1,5 N/m²</p>
                                 </div>
@@ -533,7 +533,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong> Compression resistance</strong>
+                                    <strong> Resistenza alla compressione</strong>
                                     <p>30 N/m² (28 giorni)
                                 </div>
                             </div>
@@ -545,7 +545,7 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/alta_adherencia.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Adherence to the substrate
+                                    <strong>Aderenza al supporto
                                     </strong>
                                     <p>1,5N/m²</p>
                                 </div>
@@ -620,7 +620,7 @@
                             <div class="row mt-3 ">
                                 <!-- Texto -->
                                 <div class="col-9 col-md-5 pasoapli">
-                                    <strong>Passo 2</strong><br>Application of the first layer of Microbase without
+                                    <strong>Passo 2</strong><br>Applicazione of the first layer of Microbase without
                                     pigment.
                                     Sand.
                                 </div>
@@ -653,7 +653,7 @@
                             <div class="row mt-3 ">
                                 <!-- Texto -->
                                 <div class="col-9 col-md-5 pasoapli">
-                                    <strong>Passo 4</strong><br>Application of the first layer of Microdeck with
+                                    <strong>Passo 4</strong><br>Applicazione of the first layer of Microdeck with
                                     pigment.
                                     Sand.
                                 </div>
@@ -670,7 +670,7 @@
                             <div class="row mt-3 ">
                                 <!-- Texto -->
                                 <div class="col-9 col-md-5 pasoapli">
-                                    <strong>Passo 5</strong><br>Application of the second layer of Microdeck with
+                                    <strong>Passo 5</strong><br>Applicazione of the second layer of Microdeck with
                                     pigment. sand.
                                 </div>
                                 <!-- Icono -->
