--- a/it/sistemi/sttandard-microcemento-bicomponente.html
+++ b/it/sistemi/sttandard-microcemento-bicomponente.html
@@ -191,8 +191,8 @@
                     <li><a href="#sttandard-microdeck">Sttandard Microdeck</a></li>
                     <li><a href="#sttandard-microstone">Sttandard Microstone</a></li>
                     <li><a href="#sttandard-acricem">Sttandard Acricem</a></li>
-                    <li><a href="#aplicacion">Application</a></li>
-                    <li> <a href="#colores">Colours</a></li>
+                    <li><a href="#aplicacion">Applicazione</a></li>
+                    <li> <a href="#colores">Colori</a></li>
                 </ul>
             </div>
         </div>
@@ -328,7 +328,7 @@
                             <a class="links" href="../data-sheets/MicrobaseBI-EN.pdf" target="_blank"> <span
                                     class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span><strong>Download here the data sheet of
+                                </span><strong>Scarica qui la scheda tecnica di
                                     Sttandard Microbase</strong>
                             </a>
                         </div>
@@ -390,7 +390,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Compression resistance
+                                    <strong>Resistenza alla compressione
                                     </strong>
                                     <p>45 N/nm2 (28 giorni)</p>
                                 </div>
@@ -401,7 +401,7 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/alta_adherencia.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Adherence to the substrate
+                                    <strong>Aderenza al supporto
                                     </strong>
                                     <p>1,5 N/nm2
                                     </p>
@@ -472,7 +472,7 @@
                             <a class="links" href="../data-sheets/MicrofinoBI-EN.pdf" target="_blank"> <span
                                     class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span><strong>Download here the technical sheet of
+                                </span><strong>Scarica qui la scheda tecnica di
                                     Sttandard Microfino</strong>
                             </a>
                         </div>
@@ -524,7 +524,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Compression resistance</strong>
+                                    <strong>Resistenza alla compressione</strong>
                                     <p>22 N/nm2 (28 giorni)</p>
                                 </div>
                             </div>
@@ -547,7 +547,7 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/alta_adherencia.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Adherence to the substrate
+                                    <strong>Aderenza al supporto
                                     </strong>
                                     <p>1,2 N/nm2
                                     </p>
@@ -611,7 +611,7 @@
                             <a class="links" href="../data-sheets/MicrodeckBI-EN.pdf" target="_blank"><span
                                     class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span><strong>Download here the technical sheet of Sttandard Microdeck</strong>
+                                </span><strong>Scarica qui la scheda tecnica di Sttandard Microdeck</strong>
                             </a>
                         </div>
                     </div>
@@ -666,7 +666,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Compression resistance
+                                    <strong>Resistenza alla compressione
                                     </strong>
                                     <p>35N/nm2 (28 days</p>
                                 </div>
@@ -677,7 +677,7 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/alta_adherencia.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Adherence to the substrate
+                                    <strong>Aderenza al supporto
                                     </strong>
                                     <p>1,2 N/nm2
                                     </p>
@@ -746,7 +746,7 @@
                             <a class="links" href="../data-sheets/MicrostoneBI-EN.pdf" target="_blank"><span
                                     class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span><strong>Download here the technical sheet of
+                                </span><strong>Scarica qui la scheda tecnica di
                                     Sttandard Microstone</strong>
                             </a>
                         </div>
@@ -804,7 +804,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Compression resistance
+                                    <strong>Resistenza alla compressione
                                     </strong>
                                     <p>50 N/nm2 (28 giorni)</p>
                                 </div>
@@ -815,7 +815,7 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/alta_adherencia.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Adherence to the substrate
+                                    <strong>Aderenza al supporto
                                     </strong>
                                     <p>1,5 N/nm2
                                     </p>
@@ -883,7 +883,7 @@
                             <a class="links" href="https://www.topciment.com/en/data-sheets/Acricem-EN.pdf"
                                 target="_blank"><span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span><strong>Download here the technical sheet of
+                                </span><strong>Scarica qui la scheda tecnica di
                                     Sttandard Acricem</strong>
                             </a>
                         </div>
@@ -960,7 +960,7 @@
                         Rendimento</p>
                     <div class="row">
                         <div class="col-md-12"><span><strong>Sttandard Acricem </strong><br>Acricem (1
-                                layer) -
+                                mano) -
                                 0,10 L/m2</span></div>
                     </div>
                     <!-- Presentazione -->
