--- a/it/sistemi/topsealer-vernici.html
+++ b/it/sistemi/topsealer-vernici.html
@@ -331,7 +331,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/solidos.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Solids</strong>
+                                    <strong>Solidi</strong>
                                     <p>M: 31,5%, S:28,7%, B:28,3% Comp.A<br>
                                         100% Comp.B</p>
                                 </div>
@@ -342,8 +342,8 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/viscosidad.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Viscosity</strong>
-                                    <p>22 - 24s (Ford Cup 4)
+                                    <strong>Viscosità</strong>
+                                    <p>22 - 24s (Copa Ford 4)
                                         Comp.A</p>
                                 </div>
                             </div>
@@ -355,7 +355,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/densidad_aparente.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Density
+                                    <strong>Densità
                                     </strong>
                                     <p>1,018 g/mL Comp.A
                                         1,045 - 1,055 g/mL Comp.B</p>
@@ -369,7 +369,7 @@
                                 <div class="  col-md-9">
                                     <strong>PH
                                     </strong>
-                                    Between 7-9 Comp.A
+                                    Tra 7-9 Comp.A
                                     </p>
 
                                 </div>
@@ -451,7 +451,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/viscosidad.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Viscosity</strong>
+                                    <strong>Viscosità</strong>
                                     <p>22-24” a 20ºC CF-4</p>
                                 </div>
                             </div>
@@ -463,7 +463,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/densidad_aparente.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Density at 25ºC
+                                    <strong>Densità at 25ºC
                                     </strong>
                                     <p>1,018 g/ml Comp. A
                                         1,045 - 1,055 g/ml Comp. B
@@ -479,7 +479,7 @@
                                 <div class="  col-md-9">
                                     <strong>PH
                                     </strong>
-                                    Between 7 y 9</p>
+                                    Tra 7 e 9</p>
                                 </div>
                             </div>
                         </div>
@@ -557,7 +557,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/viscosidad.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Viscosity</strong>
+                                    <strong>Viscosità</strong>
                                     <p>22-24” a 20ºC CF-4</p>
                                 </div>
                             </div>
@@ -569,7 +569,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/densidad_aparente.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Density at 25ºC
+                                    <strong>Densità at 25ºC
                                     </strong>
                                     <p>1,018 g/ml Comp. A
                                         1,045 - 1,055 g/ml Comp. B
@@ -585,7 +585,7 @@
                                 <div class="  col-md-9">
                                     <strong>PH
                                     </strong>
-                                    Between 7 y 9</p>
+                                    Tra 7 e 9</p>
                                 </div>
                             </div>
                         </div>
@@ -641,7 +641,7 @@
                             <a class="links" href="../data-sheets/TopsealerPro+Fast_EN.pdf" target="_blank"> <span
                                     class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span><strong>Download the Topsealer Pro + data sheet here</strong>
+                                </span><strong>Scarica qui la scheda tecnica di Topsealer Pro + data sheet here</strong>
                             </a>
                         </div>
                     </div>
@@ -677,9 +677,9 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/viscosidad.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="col-md-9">
-                                    <strong>Viscosity
+                                    <strong>Viscosità
                                     </strong>
-                                    <p>35 s (Ford Cup 4)
+                                    <p>35 s (Copa Ford 4)
                                     </p>
                                 </div>
                             </div>
@@ -748,7 +748,7 @@
                             <a class="links" href="https://www.topciment.com/en/data-sheets/TopsealerDSV-EN.pdf"
                                 target="_blank"> <span class="fa-stack">
                                     <i class="fa fa-file-pdf-o fa-stack-1x"></i>
-                                </span><strong>Download the Topsealer DSV data sheet here</strong>
+                                </span><strong>Scarica qui la scheda tecnica di Topsealer DSV data sheet here</strong>
                             </a>
                         </div>
                     </div>
@@ -785,7 +785,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/solidos.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Solids
+                                    <strong>Solidi
                                     </strong>
                                     <p>40% Comp.A
                                         39% Comp.B</p>
@@ -842,7 +842,7 @@
                                     layer on microcement coatings in swimming pools.</h3>
 
                             </p>
-                            <p>It is also used as a primer system. Thus, it acts as a bridge between the microcement and
+                            <p>It is also used as a primer system. Thus, it acts as a bridge Tra the microcement and
                                 the sealer.
                             </p>
                             <p>Two coats are always applied and before the Topsealer WT One Coat and Topsealer WT Anti
@@ -865,7 +865,7 @@
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
                                     <strong>Dry to touch</strong>
-                                    <p>20 minutes</p>
+                                    <p>20 minuti</p>
                                 </div>
                             </div>
                         </div>
@@ -874,8 +874,8 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/viscosidad.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Viscosity</strong>
-                                    <p>10 - 11s (Ford Cup 4)</p>
+                                    <strong>Viscosità</strong>
+                                    <p>10 - 11s (Copa Ford 4)</p>
                                 </div>
                             </div>
                         </div>
@@ -886,7 +886,7 @@
                                 <div class=" col-md-3"><img src="../../imagenes/sistemas/icons/densidad_aparente.png"
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
-                                    <strong>Density a 20ºC</strong>
+                                    <strong>Densità a 20ºC</strong>
                                     <p>1 ± 0,01 g/mL</p>
                                 </div>
                             </div>
@@ -897,7 +897,7 @@
                                         class="figure-img img-fluid rounded"></div>
                                 <div class="  col-md-9">
                                     <strong>PH</strong>
-                                    Between 7,5 y 9</p>
+                                    Tra 7,5 e 9</p>
                                 </div>
                             </div>
                         </div>
